# SpanEngine

./: .editorconfig  .gitignore  Active_8h.html  Active_8h.js  Active_8h__dep__incl.map  Active_8h__dep__incl.md5  Active_8h__incl.map  Active_8h__incl.md5  Active_8h_source.html  Application_8cpp.html  Application_8cpp.js  Application_8cpp__incl.map  Application_8cpp__incl.md5  Application_8cpp_source.html  Application_8h.html  Application_8h.js  Application_8h__dep__incl.map  Application_8h__dep__incl.md5  Application_8h__incl.map  Application_8h__incl.md5  Application_8h_source.html  ArchetypeManager_8h.html  ArchetypeManager_8h.js  ArchetypeManager_8h__dep__incl.map  ArchetypeManager_8h__dep__incl.md5  ArchetypeManager_8h__incl.map  ArchetypeManager_8h__incl.md5  ArchetypeManager_8h_source.html  Archetype_8cpp.html  Archetype_8cpp__incl.map  Archetype_8cpp__incl.md5  Archetype_8cpp_source.html  Archetype_8h.html  Archetype_8h.js  Archetype_8h__dep__incl.map  Archetype_8h__dep__incl.md5  Archetype_8h__incl.map  Archetype_8h__incl.md5  Archetype_8h_source.html  AssetManager_8cpp.html  (+3345 more)
.github/workflows/: documentation.yml
Documentation/: Architecture.md  Components.md  Editor.md  Roadmap.md  Systems.md
Engine/: CMakeLists.txt
Engine/Shaders/: BRDFIntegration.hlsl  Basic.hlsl  DepthNormal.hlsl  EditorGrid.hlsl  EquirectangularToCubemap.hlsl  IrradianceMap.hlsl  LightCulling.hlsl  PrefilterMap.hlsl  SSAO.hlsl  SSAOBlur.hlsl  Shadow.hlsl  Skybox.hlsl
Engine/Source/: SpanEditor.h  SpanEngine.h
Engine/Source/Core/: Core.cpp  CoreMinimal.h
Engine/Source/Core/Containers/: FixedString.h
Engine/Source/Core/Input/: Input.cpp  Input.h
Engine/Source/Core/Log/: Logger.cpp  Logger.h
Engine/Source/Core/Math/: SpanMath.h
Engine/Source/Core/Memory/: MemoryArena.cpp  MemoryArena.h
Engine/Source/Core/Time/: Time.cpp  Time.h
Engine/Source/Editor/: GuiManager.cpp  GuiManager.h  PanelManager.h  SelectionManager.h
Engine/Source/Editor/Commands/: FileCommands.h
Engine/Source/Editor/Core/: ICommand.h
Engine/Source/Editor/ImGui/: ImGuiUI.cpp  ImGuiUI.h
Engine/Source/Editor/Panels/: EditorPanel.h  SceneViewPanel.cpp  SceneViewPanel.h
Engine/Source/Editor/Panels/Environment/: EnvironmentPanel.cpp  EnvironmentPanel.h
Engine/Source/Editor/Panels/Hierarchy/: HierarchyPanel.cpp  HierarchyPanel.h
Engine/Source/Editor/Panels/Inspector/: InspectorPanel.cpp  InspectorPanel.h  MaterialPreviewer.cpp  MaterialPreviewer.h
Engine/Source/Editor/Panels/ProjectBrowser/: ProjectBrowserPanel.cpp  ProjectBrowserPanel.h
Engine/Source/Editor/Panels/SceneView/: SceneViewPanel.cpp  SceneViewPanel.h
Engine/Source/Editor/Utils/: DirectoryWatcher.cpp  DirectoryWatcher.h  EditorFileSystem.cpp  EditorFileSystem.h  FileDialog.cpp  FileDialog.h
Engine/Source/Runtime/: Application.cpp  Application.h  EntryPoint.h
Engine/Source/Runtime/Components/Core/: Active.h  IDComponent.h  Layer.h  LocalToWorld.h  Name.h  Relationship.h  Tag.h  Transform.h
Engine/Source/Runtime/Components/Editor/: EditorCamera.h
Engine/Source/Runtime/Components/Graphics/: Camera.h  DirectionalLight.h  GraphicsComponents.h  MeshFilter.h  MeshRenderer.h  PointLight.h  SpotLight.h
Engine/Source/Runtime/Core/: LayerManager.cpp  LayerManager.h  TagManager.h
Engine/Source/Runtime/ECS/Internal/: ComponentType.cpp  ComponentType.h
Engine/Source/Runtime/ECS/Kernel/: Archetype.cpp  Archetype.h  ArchetypeManager.h  Chunk.cpp  Chunk.h  Entity.h  EntityBuilder.h  EntityManager.cpp  EntityManager.h  System.h  World.h
Engine/Source/Runtime/Graphics/: ModelLoader.cpp  ModelLoader.h  Renderer.cpp  Renderer.h
Engine/Source/Runtime/Graphics/Core/: ComputeBuffer.cpp  ComputeBuffer.h  ConstantBuffer.h  GraphicsContext.cpp  GraphicsContext.h  IBLBuilder.cpp  IBLBuilder.h  LightManager.cpp  LightManager.h  RenderPassManager.cpp  RenderPassManager.h  RenderTarget.cpp  RenderTarget.h  Shader.cpp  Shader.h  ShadowMap.cpp  ShadowMap.h
Engine/Source/Runtime/Graphics/Passes/: DepthNormalPass.cpp  DepthNormalPass.h  GridPass.cpp  GridPass.h  SSAOBlurPass.cpp  SSAOBlurPass.h  SSAOPass.cpp  SSAOPass.h  ShadowPass.cpp  ShadowPass.h  SkyboxPass.cpp  SkyboxPass.h
Engine/Source/Runtime/Graphics/Resources/: Material.cpp  Material.h  Mesh.cpp  Mesh.h  Texture.cpp  Texture.h
Engine/Source/Runtime/Platform/: Window.cpp  Window.h
Engine/Source/Runtime/Reflection/: ComponentRegistry.h  SpanAttributes.h  SpanReflection.h
Engine/Source/Runtime/Resource/: AssetManager.cpp  AssetManager.h  AssetMetadata.h  AssetRegistry.cpp  AssetRegistry.h  AssetSerializer.cpp  AssetSerializer.h
Engine/Source/Runtime/Scene/: EnvironmentSettings.h  Scene.h  SceneSerializer.cpp  SceneSerializer.h
Engine/Source/Runtime/Systems/Core/: RelationshipSystem.h  TransformSystem.h
Engine/Source/Runtime/Systems/Graphics/: CameraSystem.h  EditorCameraSystem.h  RenderSystem.h  RenderingSystem.h
Projects/Playground/: CMakeLists.txt
Projects/Playground/Assets/: NewMaterial.mat  test
Projects/Playground/Assets/Materials/: DamageHelmet.mat  NewMaterial.mat  NewMaterial_1.mat
Projects/Playground/Assets/Models/: Y Bot.fbx
Projects/Playground/Assets/Scene/: Test.span
Projects/Playground/Assets/Scenes/: Test.span
Projects/Playground/Assets/test folder/: NewComponent.h
Projects/Playground/Source/: Main.cpp
Tools/HeaderGenerator/: GenerateEngineHeader.ps1
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_14.js  all_15.js  all_16.js  all_17.js  all_18.js  all_19.js  all_1a.js  all_1b.js  all_1c.js  all_1d.js  all_1e.js  all_1f.js  all_2.js  all_20.js  all_21.js  all_22.js  all_23.js  all_24.js  all_25.js  all_26.js  all_27.js  all_28.js  all_29.js  all_2a.js  all_2b.js  all_2c.js  all_2d.js  all_2e.js  all_2f.js  all_3.js  all_30.js  all_31.js  all_32.js  all_33.js  (+172 more)
